@@ -1,118 +1,129 @@
 package org.odk.service;
 
 import org.odk.model.User;
-import org.odk.repository.UserRepository;
+import org.odk.model.Utilisateur;
+import org.odk.repository.interfaces.UserRepository;
+import org.odk.repository.jdbc.JdbcRepositoryUser;
+import org.odk.util.MotDePasseHelper;
 
-/**
- * Service pour la gestion des utilisateurs
- * Contient la logique métier
- */
 public class UserService {
-    
-    private UserRepository userRepository;
-    
+
+    private final UserRepository userRepository;
+
     public UserService() {
-        this.userRepository = new UserRepository();
+        this.userRepository = new JdbcRepositoryUser();
     }
-    
-    /**
-     * Inscrire un nouvel utilisateur
-     * @param user L'utilisateur à inscrire
-     * @return true si succès, false sinon
-     */
-    public boolean inscrire(User user) {
-        // Validation métier
+
+    public User inscrire(User user) {
         if (user == null) {
-            System.err.println("Erreur : L'utilisateur ne peut pas être null");
-            return false;
+            System.err.println("Erreur : utilisateur invalide.");
+            return null;
         }
         
-        if (user.getEmail() == null || user.getEmail().trim().isEmpty()) {
-            System.err.println("Erreur : L'email est obligatoire");
-            return false;
+        if (user.getNom() == null || user.getNom().isBlank()) {
+            System.err.println("Erreur : nom obligatoire.");
+            return null;
         }
-        
-        if (user.getMotDePasse() == null || user.getMotDePasse().length() < 6) {
-            System.err.println("Erreur : Le mot de passe doit contenir au moins 6 caractères");
-            return false;
+
+        if (user.getPrenom() == null || user.getPrenom().isBlank()) {
+            System.err.println("Erreur : prénom obligatoire.");
+            return null;
         }
-        
-        // Vérifier si l'email existe déjà
+
+        if (!validerEmail(user.getEmail())) {
+            System.err.println("Erreur : email invalide.");
+            return null;
+        }
+
+        if (!validerMotDePasse(user.getMotDePasse())) {
+            System.err.println("Erreur : mot de passe trop court.");
+            return null;
+        }
+
         if (userRepository.emailExiste(user.getEmail())) {
-            System.err.println("Erreur : Cet email est déjà utilisé : " + user.getEmail());
-            return false;
+            System.err.println("Erreur : cet email existe déjà.");
+            return null;
         }
-        
-        // Appeler le repository pour l'inscription
-        return userRepository.inscrireUtilisateur(user);
+
+        String motDePasseHashe = MotDePasseHelper.hasherMotDePasse(user.getMotDePasse());
+
+        user.setMotDePasse(motDePasseHashe);
+
+        return userRepository.sauvegarder(user);
     }
-    
-    /**
-     * Connecter un utilisateur
-     * @param email L'email de l'utilisateur
-     * @param motDePasse Le mot de passe
-     * @return L'utilisateur connecté ou null si échec
-     */
+
     public User connecter(String email, String motDePasse) {
-        // Validation métier
-        if (email == null || email.trim().isEmpty()) {
-            System.err.println("Erreur : L'email est obligatoire");
+
+        if (!validerEmail(email)) {
+            System.err.println("Erreur : email invalide.");
             return null;
         }
-        
-        if (motDePasse == null || motDePasse.trim().isEmpty()) {
-            System.err.println("Erreur : Le mot de passe est obligatoire");
+
+        if (motDePasse == null || motDePasse.isBlank()) {
+            System.err.println("Erreur : mot de passe obligatoire.");
             return null;
         }
-        
-        // Appeler le repository pour la connexion
-        User user = userRepository.connecterUtilisateur(email, motDePasse);
-        
-        if (user != null) {
-            System.out.println("✓ Connexion réussie pour : " + user.getEmail());
-        } else {
-            System.err.println("✗ Échec de la connexion. Vérifiez vos identifiants.");
+
+        User user = userRepository.trouverParEmail(email);
+
+        if (user == null) {
+            System.err.println("Erreur : aucun compte trouvé.");
+            return null;
         }
-        
+
+        boolean motDePasseCorrect = MotDePasseHelper.verifierMotDePasse(motDePasse, user.getMotDePasse());
+
+        if (!motDePasseCorrect) {
+            System.err.println("Erreur : mot de passe incorrect.");
+            return null;
+        }
+
         return user;
     }
-    
-    /**
-     * Vérifier si un email existe
-     * @param email L'email à vérifier
-     * @return true si l'email existe, false sinon
-     */
+
     public boolean emailExiste(String email) {
-        if (email == null || email.trim().isEmpty()) {
+
+        if (email == null || email.isBlank()) {
             return false;
         }
+
         return userRepository.emailExiste(email);
     }
-    
-    /**
-     * Valider le format d'un email
-     * @param email L'email à valider
-     * @return true si valide, false sinon
-     */
+
     public boolean validerEmail(String email) {
-        if (email == null || email.trim().isEmpty()) {
+
+        if (email == null || email.isBlank()) {
             return false;
         }
-        // Regex simple pour validation email
-        String emailRegex = "^[A-Za-z0-9+_.-]+@[A-Za-z0-9.-]+\\.[A-Za-z]{2,}$";
-        return email.matches(emailRegex);
+
+        String regex =
+                "^[A-Za-z0-9+_.-]+@[A-Za-z0-9.-]+\\.[A-Za-z]{2,}$";
+
+        return email.matches(regex);
     }
     
-    /**
-     * Valider la force d'un mot de passe
-     * @param motDePasse Le mot de passe à valider
-     * @return true si valide, false sinon
-     */
+    public void mettreAJourStreak(Utilisateur utilisateur) {
+
+        if (utilisateur == null || utilisateur.getId() <= 0) {
+
+            System.err.println("Utilisateur invalide.");
+
+            return;
+        }
+
+        userRepository.mettreAJourStreak(utilisateur);
+    }
+
     public boolean validerMotDePasse(String motDePasse) {
+
         if (motDePasse == null) {
             return false;
         }
-        // Au moins 6 caractères
+
         return motDePasse.length() >= 6;
+    }
+    
+    public int nbUsers() {
+    	return userRepository.nbUtilsateurs();
     }
 }
